# play-with-wasm

./: .gitignore  Cargo.toml  README.md  TODO  package-lock.json  package.json  webpack.config.js
.github/workflows/: deploy,yaml  rust.yml
concept_001/src/: brush.rs  config.rs  simulator.rs  world.rs
concept_001/src/cells/: acid_cell.rs  fire_cell.rs  oil_cell.rs  rock_cell.rs  vapor_cell.rs  water_cell.rs
docs/: cellular_automata.md  falling_sand.md  index.md  perfomance.md
frontend/: index.css  index.html  index.ts  package-lock.json  package.json  webpack.config.js
frontend/src/: index.ts
src/: background_renderer.rs  brush.rs  cell.rs  cells.rs  config.rs  gameplay_renderer.rs  lib.rs  physicslife.rs  quicklife.rs  render.rs  rle.rs  shared.rs  simulator.rs  space.rs  ui_renderer.rs  world.rs
src/cells/: acid_cell.rs  common.rs  empty_cell.rs  fire_cell.rs  gunpowder_cell.rs  lava_cell.rs  oil_cell.rs  propane_cell.rs  rock_cell.rs  sand_cell.rs  vapor_cell.rs  water_cell.rs  wood_cell.rs
src/render/: background_renderer.rs  gameplay_renderer.rs
src/resource/: cells.json
