[package]
name = "j4ffallingsand"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.90"
js-sys = "0.3.67"
web-sys = { version = "0.3.67", features = ["Window", "Document", "Element", "HtmlElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "Touch", "TouchEvent", "TouchList", "Performance"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
fixedbitset = "0.4.2"